--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,18 +1,26 @@
 buildscript {
     repositories {
+        mavenLocal()
         google()
         jcenter()
+        maven {
+            url 'http://maven.aliyun.com/nexus/content/repositories/releases/'
+        }
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.4.0'
     }
 }
 
 allprojects {
     repositories {
+        mavenLocal()
         google()
         jcenter()
+        maven {
+            url 'http://maven.aliyun.com/nexus/content/repositories/releases/'
+        }
     }
 }
 
